Fix double scroll bar glitch

--- a/react/editbar.global.css
+++ b/react/editbar.global.css
@@ -331,6 +331,10 @@ html, body {
   display: block;
 }
 
+.accordion-content {
+  overflow: hidden;
+}
+
 .accordion-item--dragged .accordion-content {
   display: none;
 }
